# rust_basic_gpt_api

./: Cargo.toml
schemas/: api_schema.json  api_schema.rs
src/: main.rs
src/apis/: call_request.rs
src/helpers/: command_line.rs  general.rs
src/models/agent_basic/: basic_agent.rs  basic_traits.rs  mod.rs
src/models/agent_manager/: managing_agent.rs
src/models/agents/: agent_architect.rs  agent_backend.rs  agent_traits.rs
web_gpt_template/src/: code_template.rs  main.rs
