[package]
name = "basic_auto_gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.26", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"
webbrowser = "0.8.13"
strum = "0.26.2"
strum_macros = "0.26.2"
ai_functions = "0.1.1"
crossterm = "0.27.0"
